--- a/page.html
+++ b/page.html
@@ -33,7 +33,7 @@
                     alt="" />
 
                 <h2 class="main-profile__skill">Frontend Developer</h2>
-
+                
                 <div class="main-profile__socials-list">
                     <a href="#" target="_blank" class="fab fa-linkedin-in" id="profile-link"></a>
                     <a href="#" target="_blank" class="fab fa-github"></a>
@@ -44,15 +44,15 @@
             </div>
 
             <!--=============== CONTENT SECTIONS ===============-->
-            <div class="content">
+            <div class="content-sections">
                 <!--=============== HOME ===============-->
-                <section class="content-card home" id="welcome-section">
+                <section class="home-section" id="welcome-section">
                     <h1>Hello, I am Jane Doe</h1>
                 </section>
 
                 <!--=============== ABOUT ME ===============-->
-                <section class="content-card about" id="about">
-                    <h1>About me</h1>
+                <section class="about-section" id="about">
+                    <h1 class="section-heading">About me</h1>
                     <div class="about-item about-me">
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis
@@ -65,6 +65,7 @@
                             consectetur quos fugiat fugit! Officiis, temporibus.
                         </p>
                     </div>
+                    
                     <div class="d-grid">
                         <div class="about-item skills">
                             <h1>Skills</h1>
@@ -101,7 +102,7 @@
                 </section>
 
                 <!--=============== PROJECTS ===============-->
-                <section class="content-card projects" id="projects">
+                <section class="projects-section" id="projects">
                     <h1>Projects</h1>
                     <div class="d-grid project-list">
                         <div class="project-tile">
@@ -161,7 +162,7 @@
                 </section>
 
                 <!--=============== EXPERIENCE ===============-->
-                <section class="content-card experience" id="experience">
+                <section class="experience-section" id="experience">
                     <h1>Experience</h1>
                     <div class="timeline">
                         <div class="timeline-items">
@@ -203,7 +204,7 @@
                 </section>
 
                 <!--=============== CONTACT ===============-->
-                <section class="content-card contact" id="contact">
+                <section class="contact-section" id="contact">
                     <h1>Contact</h1>
                     <form class="form" id="form" action="https://www.freecodecamp.com/email-submit">
                         <div class="input-box">
