--- a/page.html
+++ b/page.html
@@ -32,7 +32,7 @@
                     src="https://images.pexels.com/photos/2389349/pexels-photo-2389349.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="" />
 
-                <h2 class="main-profile__skill">Frontend Developer</h2>
+                <h2 class="main-profile__skill">Programmer / Content Creator</h2>
                 
                 <div class="main-profile__socials-list">
                     <a href="#" target="_blank" class="fab fa-linkedin-in" id="profile-link"></a>
@@ -47,7 +47,7 @@
             <div class="content-sections">
                 <!--=============== HOME ===============-->
                 <section class="home-section" id="welcome-section">
-                    <h1>Hello, I am Jane Doe</h1>
+                    <h1>Hello, I'm Meowish</h1>
                 </section>
 
                 <!--=============== ABOUT ME ===============-->
@@ -68,7 +68,7 @@
                     
                     <div class="d-grid">
                         <div class="about-item skills">
-                            <h1>Skills</h1>
+                            <h1 class="about-item__heading">Skills</h1>
                             <span class="skill">HTML</span>
                             <span class="skill">CSS</span>
                             <span class="skill">JavaScript</span>
@@ -83,19 +83,15 @@
                             <span class="skill">Figma</span>
                         </div>
 
-                        <div class="about-item languages">
-                            <h1>Languages</h1>
+                        <div class="about-item language-list">
+                            <h1 class="about-item__heading">Languages</h1>
                             <div class="language">
-                                <p>polish</p>
-                                <span class="bar"><span class="polish"></span></span>
+                                <p class="language-label">Tagalog</p>
+                                <p class="language-bar"><span class="polish"></span></p>
                             </div>
                             <div class="language">
-                                <p>english</p>
-                                <span class="bar"><span class="english"></span></span>
-                            </div>
-                            <div class="language">
-                                <p>french</p>
-                                <span class="bar"><span class="french"></span></span>
+                                <p class="language-label">English</p>
+                                <p class="language-bar"><span class="english"></span></p>
                             </div>
                         </div>
                     </div>
@@ -103,54 +99,54 @@
 
                 <!--=============== PROJECTS ===============-->
                 <section class="projects-section" id="projects">
-                    <h1>Projects</h1>
+                    <h1 class="section-heading">Projects</h1>
                     <div class="d-grid project-list">
-                        <div class="project-tile">
-                            <img src="https://shots.codepen.io/nietoperq/pen/BaPJqGW-512.webp?version=1674304822"
+                        <div class="project-card">
+                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/BaPJqGW-512.webp?version=1674304822"
                                 alt="" />
-                            <div class="overlay">
-                                <div class="project-description">
-                                    <h3>Project 1</h3>
-                                    <p>
+                            <div class="project-card__overlay">
+                                <div class="project-details">
+                                    <h3 class="project-title">Project 1</h3>
+                                    <p class="project-description">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="project-tile">
-                            <img src="https://shots.codepen.io/nietoperq/pen/GRBOjyV-512.webp?version=1674084446"
+                        <div class="project-card">
+                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/GRBOjyV-512.webp?version=1674084446"
                                 alt="" />
-                            <div class="overlay">
-                                <div class="project-description">
-                                    <h3>Project 2</h3>
-                                    <p>
+                            <div class="project-card__overlay">
+                                <div class="project-details">
+                                    <h3 class="project-title">Project 1</h3>
+                                    <p class="project-description">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="project-tile">
-                            <img src="https://shots.codepen.io/nietoperq/pen/dyjWxgX-512.webp?version=1673554073"
+                        <div class="project-card">
+                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/dyjWxgX-512.webp?version=1673554073"
                                 alt="" />
-                            <div class="overlay">
-                                <div class="project-description">
-                                    <h3>Project 3</h3>
-                                    <p>
+                            <div class="project-card__overlay">
+                                <div class="project-details">
+                                    <h3 class="project-title">Project 1</h3>
+                                    <p class="project-description">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="project-tile">
-                            <img src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
+                        <div class="project-card">
+                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
                                 alt="" />
-                            <div class="overlay">
-                                <div class="project-description">
-                                    <h3>Project 4</h3>
-                                    <p>
+                            <div class="project-card__overlay">
+                                <div class="project-details">
+                                    <h3 class="project-title">Project 1</h3>
+                                    <p class="project-description">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
@@ -158,46 +154,39 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://github.com/nietoperq">see more...</a>
                 </section>
 
                 <!--=============== EXPERIENCE ===============-->
                 <section class="experience-section" id="experience">
-                    <h1>Experience</h1>
-                    <div class="timeline">
-                        <div class="timeline-items">
+                    <h1 class="section-heading">Experience</h1>
+                    <div class="timeline-container">
+                        <div class="timeline-item-list">
                             <div class="timeline-item">
                                 <div class="timeline-date">2022 - now</div>
-                                <div class="timeline-content">
-                                    <h3>timeline item 1</h3>
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                        Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                        Corporis at voluptatem culpa officia.
-                                    </p>
-                                </div>
+                                <h3 class="timeline-title">timeline item 1</h3>
+                                <p class="timeline-description">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
+                                    Corporis at voluptatem culpa officia.
+                                </p>
                             </div>
                             <div class="timeline-item">
                                 <div class="timeline-date">2015 - 2022</div>
-                                <div class="timeline-content">
-                                    <h3>timeline item 2</h3>
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                        Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                        Corporis at voluptatem culpa officia.
-                                    </p>
-                                </div>
+                                <h3 class="timeline-title">timeline item 2</h3>
+                                <p class="timeline-description">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
+                                    Corporis at voluptatem culpa officia.
+                                </p>
                             </div>
                             <div class="timeline-item">
                                 <div class="timeline-date">2014 - 2015</div>
-                                <div class="timeline-content">
-                                    <h3>timeline item 3</h3>
-                                    <p>
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                        Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                        Corporis at voluptatem culpa officia.
-                                    </p>
-                                </div>
+                                <h3 class="timeline-title">timeline item 3</h3>
+                                <p class="timeline-description">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
+                                    Corporis at voluptatem culpa officia.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -205,17 +194,13 @@
 
                 <!--=============== CONTACT ===============-->
                 <section class="contact-section" id="contact">
-                    <h1>Contact</h1>
-                    <form class="form" id="form" action="https://www.freecodecamp.com/email-submit">
+                    <h1 class="section-heading">Contact</h1>
+                    <form class="contact-form" id="contact-form">
                         <div class="input-box">
                             <input type="text" class="text-input" name="name" placeholder="Name" />
                         </div>
                         <div class="input-box">
                             <input type="email" class="text-input" name="email" id="email" placeholder="Email" />
-                        </div>
-                        <div class="input-box">
-                            <input type="subject" class="text-input" name="subject" id="subject"
-                                placeholder="Subject" />
                         </div>
                         <div class="input-box">
                             <textarea name="text" class="message" placeholder="Message..."></textarea>
