Fix mobile view: make side profile and navigation fixed Add scroll-to-top button in footer

--- a/page.html
+++ b/page.html
@@ -26,7 +26,7 @@
         </div>
 
         <!--=============== PORTFOLIO ===============-->
-        <div class="portfolio">
+        <div class="portfolio" id="portfolio">
             <div class="main-profile">
                 <img class="main-profile__img"
                     src="images-and-icons/images/meowish profile.jpeg"
@@ -230,6 +230,14 @@
                         <button type="submit" class="submit-btn" id="submit">Button</button>
                     </form>
                 </section>
+
+                <!--=============== FOOTER ===============-->
+                <footer>
+                    <a class="scroll-top-btn" href="#portfolio">
+                        <span class="scroll-top-btn__label">Scroll to top</span>
+                        <img class="scroll-top-btn__arrow-icon" src="images-and-icons/icons/arrow to top.png" alt="Arrow icon">                   
+                    </a>
+                </footer>
             </div>
         </div>
     </div>
