--- a/page.html
+++ b/page.html
@@ -18,11 +18,11 @@
     <div class="main-wrapper">
         <!--=============== NAVIGATION MENU ===============-->
         <div class="navigation-list">
-            <a href="#welcome-section" class="navigation-list__icon fas fa-home active"></a>
-            <a href="#about" class="navigation-list__icon fas fa-user"></a>
-            <a href="#projects" class="navigation-list__icon fas fa-code"></a>
-            <a href="#experience" class="navigation-list__icon fas fa-briefcase"></a>
-            <a href="#contact" class="navigation-list__icon fas fa-envelope"></a>
+            <a href="#home-section" id="navigation-list__home-icon" class="navigation-list__icon fas fa-home active"></a>
+            <a href="#about-section" id="navigation-list__about-icon" class="navigation-list__icon fas fa-user"></a>
+            <a href="#projects-section" id="navigation-list__project-icon" class="navigation-list__icon fas fa-folder-open"></a>
+            <a href="#experience-section" id="navigation-list__experience-icon" class="navigation-list__icon fas fa-briefcase"></a>
+            <a href="#contact-section" id="navigation-list__contact-icon" class="navigation-list__icon fas fa-envelope"></a>
         </div>
 
         <!--=============== PORTFOLIO ===============-->
@@ -46,12 +46,12 @@
             <!--=============== CONTENT SECTIONS ===============-->
             <div class="content-sections">
                 <!--=============== HOME ===============-->
-                <section class="home-section" id="welcome-section">
+                <section class="home-section" id="home-section">
                     <h1>Hello, I'm Meowish</h1>
                 </section>
 
                 <!--=============== ABOUT ME ===============-->
-                <section class="about-section" id="about">
+                <section class="about-section" id="about-section">
                     <h1 class="section-heading">About me</h1>
                     <div class="about-item about-me">
                         <p>
@@ -109,7 +109,7 @@
                 </section>
 
                 <!--=============== PROJECTS ===============-->
-                <section class="projects-section" id="projects">
+                <section class="projects-section" id="projects-section">
                     <h1 class="section-heading">Projects</h1>
 
                     <div class="d-grid project-list">
@@ -169,7 +169,7 @@
                 </section>
 
                 <!--=============== EXPERIENCE ===============-->
-                <section class="experience-section" id="experience">
+                <section class="experience-section" id="experience-section">
                     <h1 class="section-heading">Experience</h1>
                     <div class="timeline-container">
                         <div class="timeline-item-list">
@@ -214,7 +214,7 @@
                 </section>
 
                 <!--=============== CONTACT ===============-->
-                <section class="contact-section" id="contact">
+                <section class="contact-section" id="contact-section">
                     <h1 class="section-heading">Contact</h1>
                     <form class="contact-form" id="contact-form">
                         <div class="contact-form__inputs-field">
@@ -244,7 +244,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script/main.js"></script>
   </body>
 
 </html>
