feat(animation): add onscroll animations for all sections using GSAP feat(animation): enable start animation only on large screen view

--- a/page.html
+++ b/page.html
@@ -11,6 +11,10 @@
       <link rel="stylesheet" href="style/main-profile.css">
       <link rel="stylesheet" href="style/content-sections.css">
 
+      <!-- Gsap  -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script> 
+
       <title>Professional Portfolio Template</title>
   </head>
   <body>
@@ -98,11 +102,11 @@
                             <h1 class="about-item__heading">Languages</h1>
                             <div class="language">
                                 <p class="language-label">Tagalog</p>
-                                <p class="language-bar"><span class="first-bar"></span></p>
+                                <p class="language-bar"><span class="bar first-bar" data-width="100"></span></p>
                             </div>
                             <div class="language">
                                 <p class="language-label">English</p>
-                                <p class="language-bar"><span class="second-bar"></span></p>
+                                <p class="language-bar"><span class="bar second-bar" data-width="50"></span></p>
                             </div>
                         </div>
                     </div>
@@ -120,6 +124,8 @@
                                 <div class="project-details">
                                     <h3 class="project-title">Project 1</h3>
                                     <p class="project-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        Nisi aperiam voluptate accusamus velit omnis.
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
