feat(project): add view button

--- a/page.html
+++ b/page.html
@@ -125,11 +125,9 @@
                                     <h3 class="project-title">Project 1</h3>
                                     <p class="project-description">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Nisi aperiam voluptate accusamus velit omnis.
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
+                                <a href="#" class="project-view-btn" target="_blank">View More</a>
                             </div>
                         </div>
                         <div class="project-card">
@@ -143,6 +141,7 @@
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
+                                <a href="#" class="project-view-btn" target="_blank">View More</a>
                             </div>
                         </div>
                         <div class="project-card">
@@ -156,6 +155,7 @@
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
+                                <a href="#" class="project-view-btn" target="_blank">View More</a>
                             </div>
                         </div>
                         <div class="project-card">
@@ -169,6 +169,7 @@
                                         Nisi aperiam voluptate accusamus velit omnis.
                                     </p>
                                 </div>
+                                <a href="#" class="project-view-btn" target="_blank">View More</a>
                             </div>
                         </div>
                     </div>
