Add email in profile

--- a/page.html
+++ b/page.html
@@ -37,7 +37,9 @@
                     alt="profile-picture" />
 
                 <h2 class="main-profile__skill">Programmer / Content Creator</h2>
-                
+
+                <p class="main-profile__email">meowish.000@gmail.com</p>
+
                 <div class="main-profile__socials-list">
                     <a href="#" target="_blank" class="fab fa-facebook" id="profile-link"></a>
                     <a href="#" target="_blank" class="fab fa-instagram"></a>
@@ -241,8 +243,8 @@
                 </section>
 
                 <!--=============== FOOTER ===============-->
-                <footer>
-                    <a class="scroll-top-btn" href="#portfolio">
+                <footer>                  
+                    <a class="footer__scroll-top-btn" href="#portfolio">
                         <span class="scroll-top-btn__label">Scroll to top</span>
                         <img class="scroll-top-btn__arrow-icon" src="images-and-icons/icons/arrow to top.png" alt="Arrow icon">                   
                     </a>
