--- a/page.html
+++ b/page.html
@@ -118,63 +118,98 @@
                 <section class="projects-section" id="projects-section">
                     <h1 class="section-heading">Projects</h1>
 
-                    <div class="d-grid project-list">
-                        <div class="project-card">
-                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/BaPJqGW-512.webp?version=1674304822"
-                                alt="" />
-                            <div class="project-card__overlay">
-                                <div class="project-details">
-                                    <h3 class="project-title">Project 1</h3>
-                                    <p class="project-description">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    </p>
+                    <div class="project-cards-container">
+                        <div class="d-grid project-list">
+                            <div class="project-card">
+                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/BaPJqGW-512.webp?version=1674304822"
+                                    alt="" />
+                                <div class="project-card__overlay">
+                                    <div class="project-details">
+                                        <h3 class="project-title">Project 1</h3>
+                                        <p class="project-description">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
                                 </div>
-                                <a href="#" class="project-view-btn" target="_blank">View More</a>
+                            </div>
+                            <div class="project-card">
+                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/GRBOjyV-512.webp?version=1674084446"
+                                    alt="" />
+                                <div class="project-card__overlay">
+                                    <div class="project-details">
+                                        <h3 class="project-title">Project 1</h3>
+                                        <p class="project-description">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Nisi aperiam voluptate accusamus velit omnis.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
+                                </div>
+                            </div>
+                            <div class="project-card">
+                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/dyjWxgX-512.webp?version=1673554073"
+                                    alt="" />
+                                <div class="project-card__overlay">
+                                    <div class="project-details">
+                                        <h3 class="project-title">Project 1</h3>
+                                        <p class="project-description">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Nisi aperiam voluptate accusamus velit omnis.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
+                                </div>
+                            </div>
+                            <div class="project-card">
+                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
+                                    alt="" />
+                                <div class="project-card__overlay">
+                                    <div class="project-details">
+                                        <h3 class="project-title">Project 1</h3>
+                                        <p class="project-description">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Nisi aperiam voluptate accusamus velit omnis.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
+                                </div>
                             </div>
                         </div>
-                        <div class="project-card">
-                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/GRBOjyV-512.webp?version=1674084446"
-                                alt="" />
-                            <div class="project-card__overlay">
-                                <div class="project-details">
-                                    <h3 class="project-title">Project 1</h3>
-                                    <p class="project-description">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Nisi aperiam voluptate accusamus velit omnis.
-                                    </p>
+
+                        <div class="d-grid more-project-list hide">
+                            <div class="project-card">
+                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
+                                    alt="" />
+                                <div class="project-card__overlay">
+                                    <div class="project-details">
+                                        <h3 class="project-title">Project 1</h3>
+                                        <p class="project-description">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Nisi aperiam voluptate accusamus velit omnis.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
                                 </div>
-                                <a href="#" class="project-view-btn" target="_blank">View More</a>
                             </div>
-                        </div>
-                        <div class="project-card">
-                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/dyjWxgX-512.webp?version=1673554073"
-                                alt="" />
-                            <div class="project-card__overlay">
-                                <div class="project-details">
-                                    <h3 class="project-title">Project 1</h3>
-                                    <p class="project-description">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Nisi aperiam voluptate accusamus velit omnis.
-                                    </p>
+                            <div class="project-card">
+                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
+                                    alt="" />
+                                <div class="project-card__overlay">
+                                    <div class="project-details">
+                                        <h3 class="project-title">Project 1</h3>
+                                        <p class="project-description">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Nisi aperiam voluptate accusamus velit omnis.
+                                        </p>
+                                    </div>
+                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
                                 </div>
-                                <a href="#" class="project-view-btn" target="_blank">View More</a>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
-                                alt="" />
-                            <div class="project-card__overlay">
-                                <div class="project-details">
-                                    <h3 class="project-title">Project 1</h3>
-                                    <p class="project-description">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Nisi aperiam voluptate accusamus velit omnis.
-                                    </p>
-                                </div>
-                                <a href="#" class="project-view-btn" target="_blank">View More</a>
                             </div>
                         </div>
                     </div>
+                    
+                    <button class="project-cards-container__toggle-btn">See More</button>
                 </section>
 
                 <!--=============== EXPERIENCE ===============-->
