feat(content) make dynamic all the contents and add resume and projects image

--- a/page.html
+++ b/page.html
@@ -31,85 +31,29 @@
 
         <!--=============== PORTFOLIO ===============-->
         <div class="portfolio" id="portfolio">
-            <div class="main-profile">
-                <img class="main-profile__img"
-                    src="images-and-icons/images/meowish profile.jpeg"
-                    alt="profile-picture" />
-
-                <h2 class="main-profile__skill">Programmer / Content Creator</h2>
-
-                <p class="main-profile__email">meowish.000@gmail.com</p>
-
-                <div class="main-profile__socials-list">
-                    <a href="#" target="_blank" class="fab fa-facebook" id="profile-link"></a>
-                    <a href="#" target="_blank" class="fab fa-instagram"></a>
-                    <a href="#" target="_blank" class="fab fa-tiktok"></a>
-                </div>
-
-                <a href="files/MyCV.pdf" download="MyCV" class="main-profile__cta">Download CV</a>
-            </div>
+            <div class="main-profile"><!-- Content Render in --></div>
 
             <!--=============== CONTENT SECTIONS ===============-->
             <div class="content-sections">
                 <!--=============== HOME ===============-->
-                <section class="home-section" id="home-section">
-                    <h1>Hello, I'm Meowish</h1>
-                </section>
+                <section class="home-section" id="home-section"><!-- Content Render in --></section>
 
                 <!--=============== ABOUT ME ===============-->
                 <section class="about-section" id="about-section">
                     <h1 class="section-heading">About me</h1>
-                    <div class="about-item about-me">
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis
-                            non dolore facere reiciendis iusto nemo tempore laboriosam
-                            laborum fugit dolorum totam incidunt tempora laudantium
-                            obcaecati natus sit, aspernatur consectetur! Voluptates?
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-                            consectetur quos fugiat fugit! Officiis, temporibus.
-                        </p>
-                    </div>
+                    <div class="about-item about-me"><!-- Content Render in --></div>
                     
                     <div class="tools-and-languge-container d-grid">
                         <div class="about-item tools-container">
                             <h1 class="about-item__heading">Tools</h1>
 
-                            <div class="tools-list">
-                                <div class="tool">
-                                    <img class="tool-icon" src="images-and-icons/icons/html-icon.png" alt="HTML Icon">
-                                    <p class="tool-label">HTML</p>
-                                </div>
-                                <div class="tool">
-                                    <img class="tool-icon" src="images-and-icons/icons/css-icon.png" alt="CSS Icon">
-                                    <p class="tool-label">CSS</p>
-                                </div>
-                                <div class="tool">
-                                    <img class="tool-icon" src="images-and-icons/icons/js-icon.png" alt="JS Icon">
-                                    <p class="tool-label">JS</p>
-                                </div>
-                                <div class="tool">
-                                    <img class="tool-icon" src="images-and-icons/icons/html-icon.png" alt="HTML Icon">
-                                    <p class="tool-label">HTML</p>
-                                </div>
-                                <div class="tool">
-                                    <img class="tool-icon" src="images-and-icons/icons/css-icon.png" alt="CSS Icon">
-                                    <p class="tool-label">CSS</p>
-                                </div>
-                            </div>
+                            <div class="tools-list"><!-- Content Render in --></div>
                         </div>
 
-                        <div class="about-item language-list">
+                        <div class="about-item languages-container">
                             <h1 class="about-item__heading">Languages</h1>
-                            <div class="language">
-                                <p class="language-label">Tagalog</p>
-                                <p class="language-bar"><span class="bar first-bar" data-width="100"></span></p>
-                            </div>
-                            <div class="language">
-                                <p class="language-label">English</p>
-                                <p class="language-bar"><span class="bar second-bar" data-width="50"></span></p>
-                            </div>
+
+                            <div class="language-list"><!-- Content Render in --></div>                      
                         </div>
                     </div>
                 </section>
@@ -119,94 +63,9 @@
                     <h1 class="section-heading">Projects</h1>
 
                     <div class="project-cards-container">
-                        <div class="d-grid project-list">
-                            <div class="project-card">
-                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/BaPJqGW-512.webp?version=1674304822"
-                                    alt="" />
-                                <div class="project-card__overlay">
-                                    <div class="project-details">
-                                        <h3 class="project-title">Project 1</h3>
-                                        <p class="project-description">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        </p>
-                                    </div>
-                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
-                                </div>
-                            </div>
-                            <div class="project-card">
-                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/GRBOjyV-512.webp?version=1674084446"
-                                    alt="" />
-                                <div class="project-card__overlay">
-                                    <div class="project-details">
-                                        <h3 class="project-title">Project 1</h3>
-                                        <p class="project-description">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Nisi aperiam voluptate accusamus velit omnis.
-                                        </p>
-                                    </div>
-                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
-                                </div>
-                            </div>
-                            <div class="project-card">
-                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/dyjWxgX-512.webp?version=1673554073"
-                                    alt="" />
-                                <div class="project-card__overlay">
-                                    <div class="project-details">
-                                        <h3 class="project-title">Project 1</h3>
-                                        <p class="project-description">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Nisi aperiam voluptate accusamus velit omnis.
-                                        </p>
-                                    </div>
-                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
-                                </div>
-                            </div>
-                            <div class="project-card">
-                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
-                                    alt="" />
-                                <div class="project-card__overlay">
-                                    <div class="project-details">
-                                        <h3 class="project-title">Project 1</h3>
-                                        <p class="project-description">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Nisi aperiam voluptate accusamus velit omnis.
-                                        </p>
-                                    </div>
-                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="d-grid project-list"><!-- Content Render in --></div>
 
-                        <div class="d-grid more-project-list hide">
-                            <div class="project-card">
-                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
-                                    alt="" />
-                                <div class="project-card__overlay">
-                                    <div class="project-details">
-                                        <h3 class="project-title">Project 1</h3>
-                                        <p class="project-description">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Nisi aperiam voluptate accusamus velit omnis.
-                                        </p>
-                                    </div>
-                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
-                                </div>
-                            </div>
-                            <div class="project-card">
-                                <img class="project-card__img" src="https://shots.codepen.io/nietoperq/pen/vYagdwo-512.webp?version=1673549480"
-                                    alt="" />
-                                <div class="project-card__overlay">
-                                    <div class="project-details">
-                                        <h3 class="project-title">Project 1</h3>
-                                        <p class="project-description">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Nisi aperiam voluptate accusamus velit omnis.
-                                        </p>
-                                    </div>
-                                    <a href="#" class="project-view-btn" target="_blank">View More</a>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="d-grid more-project-list hide"><!-- Content Render in --></div>
                     </div>
                     
                     <button class="project-cards-container__toggle-btn">See More</button>
@@ -216,44 +75,7 @@
                 <section class="experience-section" id="experience-section">
                     <h1 class="section-heading">Experience</h1>
                     <div class="timeline-container">
-                        <div class="timeline-item-list">
-                            <div class="timeline-item">
-                                <div class="timeline-date">2022 - now</div>
-                                <h3 class="timeline-title">timeline item 1</h3>
-                                <p class="timeline-description">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                    Corporis at voluptatem culpa officia.
-                                </p>
-                            </div>
-                            <div class="timeline-item">
-                                <div class="timeline-date">2022 - now</div>
-                                <h3 class="timeline-title">timeline item 1</h3>
-                                <p class="timeline-description">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                    Corporis at voluptatem culpa officia.
-                                </p>
-                            </div>
-                            <div class="timeline-item">
-                                <div class="timeline-date">2015 - 2022</div>
-                                <h3 class="timeline-title">timeline item 2</h3>
-                                <p class="timeline-description">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                    Corporis at voluptatem culpa officia.
-                                </p>
-                            </div>
-                            <div class="timeline-item">
-                                <div class="timeline-date">2014 - 2015</div>
-                                <h3 class="timeline-title">timeline item 3</h3>
-                                <p class="timeline-description">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Ab iusto accusantium nostrum eligendi debitis quisquam.
-                                    Corporis at voluptatem culpa officia.
-                                </p>
-                            </div>
-                        </div>
+                        <div class="timeline-item-list"><!-- Content Render in --></div>
                     </div>
                 </section>
 
@@ -288,7 +110,7 @@
         </div>
     </div>
 
-    <script src="script/main.js"></script>
+    <script type="module" src="script/main.js"></script>
   </body>
 
 </html>
